- Fixed bug #27056 (ints used instead of longs inside some GD functions).
  (Ilia)
- Fixed bug #27040 (passing an array of form-fields to CURLOPT_POSTFIELDS
  does not work). (Ilia, Jani)
- Fixed bug #27037 (fixed possible crash in apache2handler output code). (Ilia)
- Fixed bug #27011 (64bit int/long confusion in preg_match*() functions).
  (Ilia)
- Fixed bug #26974 (rename() doesn't check the destination file against 
  safe_mode/open_basedir). (Ilia)
- Fixed bug #26973 (*printf() '+' modifier broken). (Jani)
- Fixed bug #26969 (--with-openssl=shared build fails). (Jani)
- Fixed bug #26968 (Segfault with Interbase module built as shared). (Ard)
- Fixed bug #26949 (rand(min,max) always returns min when ZTS enabled). (Jani)
- Fixed bug #26937 (Warning in xml.c). (Jani)
- Fixed Bug #26927 (preg_quote() does not escape \0). (Ilia)
- Fixed bug #26923 (ext/imap: pam and crypt libraries missing when build as
  shared extension). (Jani)
- Fixed bug #26909 (crash in imap_mime_header_decode() when no encoding is 
  used). (Ilia)
- Fixed bug #26892 (ORA-21301 in ocinewcollection() call). (Antony)
- Fixed bug #26878 (problem with multiple references to the same variable 
  with different types). (Ilia)
- Fixed bug #26896 (ext/ftp does not work as shared extension). (Jani)
- Fixed bug #26814 (When included file has a parse error, terminate script
  execution). (Ilia)
- Fixed bug #26772, #26967 (file operations return NULL instead of FALSE).
  (Wez, Ilia)
- Fixed bug #26381 (rand() without srand() doesn't work with certain php.ini).
  (Jani)
- Fixed bug #25753 (php.ini settings "leak" from vhosts/.htaccess files).
  (Patch by: rover at tob dot ru)
- Fixed bug #22403 (PHP crashes when executing a sql procedure without
  parameters). (Timm)
- Fixed bug #21513 (shutdown functions not executed if timed out). (Zeev)

12 Jan 2004, Version 4.3.5RC1
- Synchronized bundled GD library with GD 2.0.17
- Upgraded PCRE library to version 4.5. (Andrei)